# CDE_Graphics_1

./: .gitignore  CMakeLists.txt  GroupMeetings.odt  LICENSE  README.md
JacobianIK/: main.m
Latex/: ReportAG.aux  ReportAG.bbl  ReportAG.bib  ReportAG.blg  ReportAG.dvi  ReportAG.tex
MATLAB/: animateSolution.m  evalF.asv  evalF.m  fdJacobian.m  forwardK.asv  forwardKin.m  lineSearch.m  main.asv  main.m  newtonSolve.m  plotOut.m  refitAngle.m  searchLine.m  surf_Grid.m
Matlab/: calcDistance.m  calcJacobian.m  evalF.m  evalF_constraints.m  fdJacobian.m  fdJacobian_constraints.m  forwardK.m  linesearch.m  main.m  newtontest.m  plotLinks.m
cmakeModules/: FindASSIMP.cmake  FindFreeImageplus.cmake  FindGLFW.cmake
src/: Axis.cpp  Axis.h  Bone.cpp  Bone.h  Chain.cpp  Chain.h  Drawable.h  InputHandler.cpp  InputHandler.h  Joint.cpp  Joint.h  Line.cpp  Line.h  PrimitiveParameter.cpp  PrimitiveParameter.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  SimulationController.h  SimulationSolver.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  VertexObject.cpp  VertexObject.h  Window.cpp  Window.h  fragmentShader.glsl  main.cpp
src/models/: Bone.cpp  Bone.h  BoneModel.cpp  BoneModel.h  Chain.cpp  Chain.h  ChainModel.cpp  ChainModel.h  Drawable.h  Joint.cpp  Joint.h  JointModel.cpp  JointModel.h  Point.cpp  Point.h  PointSet.cpp  PointSet.h  PrimitiveParameter.cpp  PrimitiveParameter.h  Square.h  Triangle.cpp  VertexObject.cpp  VertexObject.h
src/rendering/: FPSCounter.cpp  FPSCounter.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  fragmentShader.glsl  vertexShader.glsl
src/rendering/drawables/: Axis.cpp  Axis.h  Bone.cpp  Bone.h  Chain.cpp  Chain.h  Cube.cpp  Cube.h  Drawable.h  Joint.cpp  Joint.h  Line.cpp  Line.h  Point.cpp  Point3DMarker.cpp  Point3DMarker.h  PointSet.cpp  PointSet.h  Square.cpp  Triangle.cpp  Triangle.h  VertexObject.cpp  VertexObject.h
src/simulation/: SimulationController.cpp  SimulationController.h  SimulationSolver.cpp  SimulationSolver.h
